tests/paczka1/fuzzy1/30007951.err
Error in line 2: 8t2riqHsX5J S932 66,9
Error in line 4: 1Mt8s66raa S932 92,0
Error in line 7: 1Mt8s66raa A910 34,5
Error in line 1: aXA A910 55,8
Error in line 11: 7WCvuoqUf S833 87,4
Error in line 17: 1Mt8s66raa A910 44,9
Error in line 25: mvZ A910 22,1
Error in line 30: mvZ A619 9,7
